# auto-docs

./: .gitignore  .gitmodules  Makefile  README.md  dune  dune-project  eleventy.config.js  package-lock.json  package.json
.github/workflows/: build-and-deploy.yml
_includes/: base.njk  index-page.njk  reference.njk  sidebar.njk
content/: contributing.md  demo.md  further-reading.md  index.njk  reference.md  setup.md  troubleshooting.md
content/_data/: sidebar.yaml
content/assets/css/: main.css
content/demo/: README  cpp2v-dune-gen.sh  demo.11tydata.js  dune  dune-gen.sh  dune-project  dune.inc  rocq-bluerock-cpp-demo.opam
content/demo/aggregate01/: Point.hpp  Point_hpp_proof.v  Point_hpp_spec.v
content/demo/basic/: main.cpp  main_cpp_proof.v
content/demo/data_class/: main.cpp  main_proof.v
content/demo/forward_list_v1/: test.cpp  test_cpp_proof.v
content/demo/inline/: inline.hpp  inline_hpp_spec.v
content/demo/linked_list/: linked_list.cpp  linked_list.hpp  linked_list_cpp_proof.v  linked_list_hpp_spec.v
content/demo/loops/: main.cpp  main_cpp_proof.v
content/docs/: dune
content/docs/automation/: iris_goals.md  sep.11tydata.yaml  sep.v  sep_guide.md  sep_manual.11tydata.yaml  sep_manual.v  sep_old.v
content/docs/class_reps/: alt.v  main.v
content/docs/common_errors/: automation_debugging.md  missing_function_spec.v  missing_resource.v  missing_type_instances.11tydata.yaml  missing_type_instances.v  proof_strategy_gotchas.md
content/docs/control_flow/: if.v  loop.v
content/docs/debugging/: main.v
content/docs/fractional-sharing/: intro.v
content/docs/functions/: specification.v  verification.v
content/docs/primitive_reps/: main.v
content/docs/rep_hints/: main.v
content/docs/simple/: basic_cpp_proof.v  test.v
content/docs/simple_linked_list/: main.11tydata.yaml  main.v
content/docs/state_basics/: main.v
content/reference/: automation-debug-traces.md  dune  reference.11tydata.yaml
content/reference/coq-bluerock-auto-core/theories/hints/: cancelx_notation.v  orient.v
content/reference/coq-bluerock-auto-cpp/theories/auto/cpp/auto_frac/: hints.v
content/reference/coq-bluerock-auto-cpp/theories/auto/cpp/elpi/: cpp_class.v  cpp_enum.v  cpp_spec.v
content/reference/coq-bluerock-auto-cpp/theories/auto/cpp/elpi/derive/: bi.v
content/reference/rocq-skylabs-auto-core/theories/hints/: cancelx_notation.v  orient.v
content/reference/rocq-skylabs-auto-core/theories/internal/lib/: classes.v
content/reference/rocq-skylabs-auto-cpp/theories/auto/cpp/: Arith.v  breakpoints.v  cpp_proof.v  delayed_case_tactics.v
content/reference/rocq-skylabs-auto-cpp/theories/auto/cpp/elpi/: cpp_class.v  cpp_enum.v  cpp_spec.v
content/reference/rocq-skylabs-auto-cpp/theories/auto/cpp/elpi/derive/: bi.v  eager_unfold.v  equiv.v  lazy_unfold.v
content/reference/rocq-skylabs-auto-cpp/theories/auto/cpp/hints/: fractional.v
content/reference/rocq-skylabs-auto-cpp/theories/auto/cpp/lazy/auto_frac/: hints.v
content/reference/rocq-skylabs-auto-cpp/theories/auto/cpp/specs/: inline.v
content/reference/rocq-skylabs-auto-cpp/theories/auto/elpi/derive/: bwd.v  cancel.v  fwd.v  hint_opaque.v
content/reference/rocq-skylabs-auto-cpp/theories/auto/tactics/: wapply.v
content/scaffold/: default-specs.md  getting-started.md
sphinx/: .gitignore  CODEOWNERS  DEPENDS  Makefile  README.md  build-plan.sh  ci-build.sh  core-build.sh  python_requirements.txt
sphinx/sphinx/: _CoqProject  _CoqProject.template  bedrock-cover.tmpl  bedrock-stylesheet.txt  conf.py  first_verification.v  index.rst
sphinx/src/: .gitignore  Makefile  conf.mk  conf.mk.default  coq.flags  coq.mk  dune  dune-project  dune.inc  noinit_msg.mk  rules.mk
sphinx/src/first_verification/: main.v
