; Copyright © 2022-2025 SkyLabs AI.
;
; This file is CONFIDENTIAL AND PROPRIETARY to SkyLabs AI. All rights reserved.
;
; Use of this file is only permitted subject to a separate written license agreement with SkyLabs AI.

(include_subdirs qualified)
(rocq.theory
 (name skylabs.cpp.demo) ; logical path of this library
 ; (package rocq-skylabs-cpp-demo) ; avoid installing
 (theories
  ; skylabs deps
  Stdlib Ltac2
  Lens Lens.Elpi
  stdpp iris
  Equations Equations.Prop Equations.Type
  elpi elpi_elpi elpi.apps.locker elpi.apps.NES
  ExtLib
  ; skylabs.prelude skylabs.iris.extra skylabs.upoly skylabs.lang.cpp
  ; skylabs.ltac2.logger skylabs.ltac2.extra
  ; skylabs.elpi.extra skylabs.elpi.cpp
  ; skylabs.auto.core
  ; skylabs deps END
  skylabs
  skylabs.cpp.stdlib))

(include dune.inc)

(rule
 (action (with-stdout-to dune.inc.gen (run ./dune-gen.sh)))
 (deps (glob_files_rec *.{h,c,hpp,cpp,sh})))

(rule
 (alias dune_inc)
 (action (diff dune.inc dune.inc.gen)))
