; Copyright © 2022-2025 BlueRock Security, Inc.
;
; This file is CONFIDENTIAL AND PROPRIETARY to BlueRock. All rights reserved.
;
; Use of this file is only permitted subject to a separate written license agreement with BlueRock.

(include_subdirs qualified)
(coq.theory
 (name bluerock.docs) ; logical path of this library
 ; (package rocq-bluerock-cpp-demo) ; avoid installing
 (theories
   ; bluerock deps
   Stdlib Ltac2
   Lens Lens.Elpi
   stdpp iris
   Equations Equations.Prop Equations.Type
   elpi elpi_elpi elpi.apps.locker elpi.apps.NES
   ExtLib
   ; bluerock.prelude bluerock.iris.extra bluerock.upoly bluerock.lang.cpp
   ; bluerock.ltac2.logger bluerock.ltac2.extra
   ; bluerock.elpi.extra bluerock.elpi.cpp
   ; bluerock.auto.core
   ; bluerock deps END
   bluerock
   bluerock.cpp.stdlib
))


(subdir first_verification
  (rule
    (target main.rst)
    (mode (promote (until-clean)))
    (deps (:input main.v) main.vo)
    (action
      (progn
        (bash "python ${BHV_ROOT}/fmdeps/micro-docs/sphinx/alectryon/alectryon.py --frontend coq+rst --backend rst %{input} -o %{target}")
      )
    )
  )
)
